y.output
Terminals unused in grammar

   DO
   BREAK
   SWITCH
   CASE
   DEFAULT
   CONTINUE
   GOTO
   COLON


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 var_declaration: type_specifier declaration_list SEMICOLON

   15 type_specifier: INT
   16               | FLOAT
   17               | VOID
   18               | CHAR
   19               | DOUBLE

   20 declaration_list: declaration_list COMMA ID
   21                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   22                 | ID
   23                 | ID LTHIRD CONST_INT RTHIRD

   24 statements: statement
   25           | statements statement

   26 statement: var_declaration
   27          | expression_statement
   28          | compound_statement
   29          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   30          | IF LPAREN expression RPAREN statement
   31          | IF LPAREN expression RPAREN statement ELSE statement
   32          | WHILE LPAREN expression RPAREN statement
   33          | PRINTF LPAREN ID RPAREN SEMICOLON
   34          | RETURN SEMICOLON
   35          | RETURN expression SEMICOLON

   36 expression_statement: SEMICOLON
   37                     | expression SEMICOLON

   38 variable: ID
   39         | ID LTHIRD expression RTHIRD

   40 expression: logic_expression
   41           | variable ASSIGNOP logic_expression

   42 logic_expression: rel_expression
   43                 | rel_expression LOGICOP rel_expression

   44 rel_expression: simple_expression
   45               | simple_expression RELOP simple_expression

   46 simple_expression: term
   47                  | simple_expression ADDOP term

   48 term: unary_expression
   49     | term MULOP unary_expression

   50 unary_expression: ADDOP unary_expression
   51                 | NOT unary_expression
   52                 | factor

   53 factor: variable
   54       | ID LPAREN argument_list RPAREN
   55       | LPAREN expression RPAREN
   56       | CONST_INT
   57       | CONST_FLOAT
   58       | variable INCOP
   59       | variable DECOP

   60 argument_list: arguments
   61              | /* empty */

   62 arguments: arguments COMMA logic_expression
   63          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
DECOP (258) 59
IF (259) 30 31
ELSE (260) 31
FOR (261) 29
WHILE (262) 32
DO (263)
BREAK (264)
INT (265) 15
FLOAT (266) 16
VOID (267) 17
CHAR (268) 18
DOUBLE (269) 19
RETURN (270) 34 35
SWITCH (271)
CASE (272)
DEFAULT (273)
CONTINUE (274)
GOTO (275)
PRINTF (276) 33
ADDOP (277) 47 50
MULOP (278) 49
INCOP (279) 58
RELOP (280) 45
ASSIGNOP (281) 41
LOGICOP (282) 43
NOT (283) 51
LPAREN (284) 6 7 29 30 31 32 33 54 55
RPAREN (285) 6 7 29 30 31 32 33 54 55
LCURL (286) 12 13
RCURL (287) 12 13
LTHIRD (288) 21 23 39
RTHIRD (289) 21 23 39
COMMA (290) 8 9 20 21 62
COLON (291)
SEMICOLON (292) 14 33 34 35 36 37
CONST_INT (293) 21 23 56
CONST_FLOAT (294) 57
ID (295) 6 7 8 10 20 21 22 23 33 38 39 54
LOWER_THAN_ELSE (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
start (43)
    on left: 1, on right: 0
program (44)
    on left: 2 3, on right: 1 2
unit (45)
    on left: 4 5, on right: 2 3
func_definition (46)
    on left: 6 7, on right: 5
parameter_list (47)
    on left: 8 9 10 11, on right: 6 8 9
compound_statement (48)
    on left: 12 13, on right: 6 7 28
var_declaration (49)
    on left: 14, on right: 4 26
type_specifier (50)
    on left: 15 16 17 18 19, on right: 6 7 8 9 10 11 14
declaration_list (51)
    on left: 20 21 22 23, on right: 14 20 21
statements (52)
    on left: 24 25, on right: 12 25
statement (53)
    on left: 26 27 28 29 30 31 32 33 34 35, on right: 24 25 29 30 31
    32
expression_statement (54)
    on left: 36 37, on right: 27 29
variable (55)
    on left: 38 39, on right: 41 53 58 59
expression (56)
    on left: 40 41, on right: 29 30 31 32 35 37 39 55
logic_expression (57)
    on left: 42 43, on right: 40 41 62 63
rel_expression (58)
    on left: 44 45, on right: 42 43
simple_expression (59)
    on left: 46 47, on right: 44 45 47
term (60)
    on left: 48 49, on right: 46 47 49
unary_expression (61)
    on left: 50 51 52, on right: 48 49 50 51
factor (62)
    on left: 53 54 55 56 57 58 59, on right: 52
argument_list (63)
    on left: 60 61, on right: 54
arguments (64)
    on left: 62 63, on right: 60 62


State 0

    0 $accept: . start $end

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    CHAR    shift, and go to state 4
    DOUBLE  shift, and go to state 5

    start            go to state 6
    program          go to state 7
    unit             go to state 8
    func_definition  go to state 9
    var_declaration  go to state 10
    type_specifier   go to state 11


State 1

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


State 2

   16 type_specifier: FLOAT .

    $default  reduce using rule 16 (type_specifier)


State 3

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


State 4

   18 type_specifier: CHAR .

    $default  reduce using rule 18 (type_specifier)


State 5

   19 type_specifier: DOUBLE .

    $default  reduce using rule 19 (type_specifier)


State 6

    0 $accept: start . $end

    $end  shift, and go to state 12


State 7

    1 start: program .
    2 program: program . unit

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    CHAR    shift, and go to state 4
    DOUBLE  shift, and go to state 5

    $default  reduce using rule 1 (start)

    unit             go to state 13
    func_definition  go to state 9
    var_declaration  go to state 10
    type_specifier   go to state 11


State 8

    3 program: unit .

    $default  reduce using rule 3 (program)


State 9

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 10

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 11

    6 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 14

    declaration_list  go to state 15


State 12

    0 $accept: start $end .

    $default  accept


State 13

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 14

    6 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   22 declaration_list: ID .
   23                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 16
    LTHIRD  shift, and go to state 17

    $default  reduce using rule 22 (declaration_list)


State 15

   14 var_declaration: type_specifier declaration_list . SEMICOLON
   20 declaration_list: declaration_list . COMMA ID
   21                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 18
    SEMICOLON  shift, and go to state 19


State 16

    6 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    CHAR    shift, and go to state 4
    DOUBLE  shift, and go to state 5
    RPAREN  shift, and go to state 20

    parameter_list  go to state 21
    type_specifier  go to state 22


State 17

   23 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 23


State 18

   20 declaration_list: declaration_list COMMA . ID
   21                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 24


State 19

   14 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 14 (var_declaration)


State 20

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 25

    compound_statement  go to state 26


State 21

    6 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    8 parameter_list: parameter_list . COMMA type_specifier ID
    9               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 27
    COMMA   shift, and go to state 28


State 22

   10 parameter_list: type_specifier . ID
   11               | type_specifier .

    ID  shift, and go to state 29

    $default  reduce using rule 11 (parameter_list)


State 23

   23 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 30


State 24

   20 declaration_list: declaration_list COMMA ID .
   21                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 31

    $default  reduce using rule 20 (declaration_list)


State 25

   12 compound_statement: LCURL . statements RCURL
   13                   | LCURL . RCURL

    IF           shift, and go to state 32
    FOR          shift, and go to state 33
    WHILE        shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    CHAR         shift, and go to state 4
    DOUBLE       shift, and go to state 5
    RETURN       shift, and go to state 35
    PRINTF       shift, and go to state 36
    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    LCURL        shift, and go to state 25
    RCURL        shift, and go to state 40
    SEMICOLON    shift, and go to state 41
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    compound_statement    go to state 45
    var_declaration       go to state 46
    type_specifier        go to state 47
    statements            go to state 48
    statement             go to state 49
    expression_statement  go to state 50
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


State 26

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 27

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 25

    compound_statement  go to state 59


State 28

    8 parameter_list: parameter_list COMMA . type_specifier ID
    9               | parameter_list COMMA . type_specifier

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    CHAR    shift, and go to state 4
    DOUBLE  shift, and go to state 5

    type_specifier  go to state 60


State 29

   10 parameter_list: type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 30

   23 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 23 (declaration_list)


State 31

   21 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 61


State 32

   30 statement: IF . LPAREN expression RPAREN statement
   31          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 62


State 33

   29 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 63


State 34

   32 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 64


State 35

   34 statement: RETURN . SEMICOLON
   35          | RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    SEMICOLON    shift, and go to state 65
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable           go to state 51
    expression         go to state 66
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


State 36

   33 statement: PRINTF . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 67


State 37

   50 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable          go to state 68
    unary_expression  go to state 69
    factor            go to state 58


State 38

   51 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable          go to state 68
    unary_expression  go to state 70
    factor            go to state 58


State 39

   55 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable           go to state 51
    expression         go to state 71
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


State 40

   13 compound_statement: LCURL RCURL .

    $default  reduce using rule 13 (compound_statement)


State 41

   36 expression_statement: SEMICOLON .

    $default  reduce using rule 36 (expression_statement)


State 42

   56 factor: CONST_INT .

    $default  reduce using rule 56 (factor)


State 43

   57 factor: CONST_FLOAT .

    $default  reduce using rule 57 (factor)


State 44

   38 variable: ID .
   39         | ID . LTHIRD expression RTHIRD
   54 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 72
    LTHIRD  shift, and go to state 73

    $default  reduce using rule 38 (variable)


State 45

   28 statement: compound_statement .

    $default  reduce using rule 28 (statement)


State 46

   26 statement: var_declaration .

    $default  reduce using rule 26 (statement)


State 47

   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 74

    declaration_list  go to state 15


State 48

   12 compound_statement: LCURL statements . RCURL
   25 statements: statements . statement

    IF           shift, and go to state 32
    FOR          shift, and go to state 33
    WHILE        shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    CHAR         shift, and go to state 4
    DOUBLE       shift, and go to state 5
    RETURN       shift, and go to state 35
    PRINTF       shift, and go to state 36
    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    LCURL        shift, and go to state 25
    RCURL        shift, and go to state 75
    SEMICOLON    shift, and go to state 41
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    compound_statement    go to state 45
    var_declaration       go to state 46
    type_specifier        go to state 47
    statement             go to state 76
    expression_statement  go to state 50
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


State 49

   24 statements: statement .

    $default  reduce using rule 24 (statements)


State 50

   27 statement: expression_statement .

    $default  reduce using rule 27 (statement)


State 51

   41 expression: variable . ASSIGNOP logic_expression
   53 factor: variable .
   58       | variable . INCOP
   59       | variable . DECOP

    DECOP     shift, and go to state 77
    INCOP     shift, and go to state 78
    ASSIGNOP  shift, and go to state 79

    $default  reduce using rule 53 (factor)


State 52

   37 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 80


State 53

   40 expression: logic_expression .

    $default  reduce using rule 40 (expression)


State 54

   42 logic_expression: rel_expression .
   43                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 81

    $default  reduce using rule 42 (logic_expression)


State 55

   44 rel_expression: simple_expression .
   45               | simple_expression . RELOP simple_expression
   47 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 82
    RELOP  shift, and go to state 83

    $default  reduce using rule 44 (rel_expression)


State 56

   46 simple_expression: term .
   49 term: term . MULOP unary_expression

    MULOP  shift, and go to state 84

    $default  reduce using rule 46 (simple_expression)


State 57

   48 term: unary_expression .

    $default  reduce using rule 48 (term)


State 58

   52 unary_expression: factor .

    $default  reduce using rule 52 (unary_expression)


State 59

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 6 (func_definition)


State 60

    8 parameter_list: parameter_list COMMA type_specifier . ID
    9               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 85

    $default  reduce using rule 9 (parameter_list)


State 61

   21 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 86


State 62

   30 statement: IF LPAREN . expression RPAREN statement
   31          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable           go to state 51
    expression         go to state 87
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


State 63

   29 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    SEMICOLON    shift, and go to state 41
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    expression_statement  go to state 88
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


State 64

   32 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable           go to state 51
    expression         go to state 89
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


State 65

   34 statement: RETURN SEMICOLON .

    $default  reduce using rule 34 (statement)


State 66

   35 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 90


State 67

   33 statement: PRINTF LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 91


State 68

   53 factor: variable .
   58       | variable . INCOP
   59       | variable . DECOP

    DECOP  shift, and go to state 77
    INCOP  shift, and go to state 78

    $default  reduce using rule 53 (factor)


State 69

   50 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 50 (unary_expression)


State 70

   51 unary_expression: NOT unary_expression .

    $default  reduce using rule 51 (unary_expression)


State 71

   55 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 92


State 72

   54 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    $default  reduce using rule 61 (argument_list)

    variable           go to state 68
    logic_expression   go to state 93
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58
    argument_list      go to state 94
    arguments          go to state 95


State 73

   39 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable           go to state 51
    expression         go to state 96
    logic_expression   go to state 53
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


State 74

   22 declaration_list: ID .
   23                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 17

    $default  reduce using rule 22 (declaration_list)


State 75

   12 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 12 (compound_statement)


State 76

   25 statements: statements statement .

    $default  reduce using rule 25 (statements)


State 77

   59 factor: variable DECOP .

    $default  reduce using rule 59 (factor)


State 78

   58 factor: variable INCOP .

    $default  reduce using rule 58 (factor)


State 79

   41 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable           go to state 68
    logic_expression   go to state 97
    rel_expression     go to state 54
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


State 80

   37 expression_statement: expression SEMICOLON .

    $default  reduce using rule 37 (expression_statement)


State 81

   43 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable           go to state 68
    rel_expression     go to state 98
    simple_expression  go to state 55
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


State 82

   47 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable          go to state 68
    term              go to state 99
    unary_expression  go to state 57
    factor            go to state 58


State 83

   45 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable           go to state 68
    simple_expression  go to state 100
    term               go to state 56
    unary_expression   go to state 57
    factor             go to state 58


State 84

   49 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    variable          go to state 68
    unary_expression  go to state 101
    factor            go to state 58


State 85

    8 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 8 (parameter_list)


State 86

   21 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 21 (declaration_list)


State 87

   30 statement: IF LPAREN expression . RPAREN statement
   31          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 102


State 88

   29 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 37
    NOT          shift, and go to state 38
    LPAREN       shift, and go to state 39
    SEMICOLON    shift, and go to state 41
    CONST_INT    shift, and go to state 42
    CONST_FLOAT  shift, and go to state 43
    ID           shift, and go to state 44

    expression_statement  go to state 103
    variable              go to state 51
    expression            go to state 52
    logic_expression      go to state 53
    rel_expression        go to state 54
    simple_expression     go to state 55
    term                  go to state 56
    unary_expression      go to state 57
    factor                go to state 58


State 89

   32 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 104


State 90

   35 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 35 (statement)


State 91

   33 statement: PRINTF LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 105


State 92

   55 factor: LPAREN expression RPAREN .
